src/components/delegateRegistration/summary/summary.css
@import '../../app/variables.css';
@import '../../app/mixins.css';

.userInformation {
  width: 100%;
  height: 27px;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  box-sizing: border-box;

  & .nickname {
    @mixin contentLargest;

    color: var(--color-maastricht-blue);
    margin: 0 0 0 15px;
  }

  & .address {
    @mixin contentLargest;

    color: var(--color-blue-gray);
    margin: 0 0 0 10px;
  }
}

footer {
  width: 100%;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 20px;

  & .confirmBtn,
  & .editBtn {
    width: 100%;
    max-width: 391px;
  }
}

